--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<section class="ts_maian_section">
 		<form id="convert_form" enctype="multipart/form-data" oninput="quality_result.value = quality.value">
 			<label for="image_file">Image File:</label>
-			<input type="file" id="image_file" name="image_file"><br>
+			<input type="file" id="image_file" name="image_file[]" multiple><br>
+			<!-- <input type="file" id="image_file" name="image_file"><br> -->
 			<label for="quality">WebP Quality:</label>
 			<input type="range" id="quality" name="quality" min="1" max="100" value="80">
 			<output name="quality_result" for="quality">80</output><br>
@@ -39,7 +40,7 @@
 					processData: false,
 					contentType: false,
 					success: function(response){
-						$('#result').html('<img src="' + response + '">');
+						$('#result').html(response);
 					}
 				});
 			});
