add download button
add download button

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Image to WebP Converter</title>
+	<title>Image to WebP Converter by TiydoSoft</title>
 	<link rel="stylesheet" type="text/css" href="/inc/css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 <body>
-	<h1>Image to WebP Converter</h1>
+	<h1>Image to WebP Converter by TiydoSoft</h1>
 	<section class="ts_maian_section">
 		<form id="convert_form" enctype="multipart/form-data" oninput="quality_result.value = quality.value">
 			<label for="image_file">Image File:</label>
